--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,10 @@ select:-webkit-autofill {
 html, body {
   background-color: white;
 }
+
+input,
+textarea,
+select {
+  background-color: white !important;
+  color: black !important;
+}
