--- a/src/index.css
+++ b/src/index.css
@@ -244,3 +244,17 @@ select {
   background-color: white !important;
   color: black !important;
 }
+
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill:focus {
+  outline: 2px solid rgb(59 130 246) !important; /* blue-500 */
+  outline-offset: 2px !important;
+}
+
+html input:focus,
+html textarea:focus,
+html select:focus {
+  outline: 2px solid rgb(59 130 246) !important; /* blue-500 */
+  outline-offset: 2px !important;
+}
