--- a/src/index.css
+++ b/src/index.css
@@ -229,11 +229,12 @@
 input:-webkit-autofill,
 textarea:-webkit-autofill,
 select:-webkit-autofill {
+  background-color: white !important;
   -webkit-box-shadow: 0 0 0px 1000px white inset !important;
   box-shadow: 0 0 0px 1000px white inset !important;
   -webkit-text-fill-color: #000 !important;
+  transition: background-color 5000s ease-in-out 0s; /* prevents quick flash */
 }
-
 html, body {
   background-color: white;
 }
@@ -243,18 +244,28 @@ textarea,
 select {
   background-color: white !important;
   color: black !important;
+  outline: none !important; /* Remove default outline */
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: 2px solid rgb(59 130 246) !important; /* Apply custom blue outline */
+  outline-offset: 2px !important;
 }
 
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill:focus,
 select:-webkit-autofill:focus {
-  outline: 2px solid rgb(59 130 246) !important; /* blue-500 */
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  box-shadow: 0 0 0px 1000px white inset !important;
+  outline: 2px solid rgb(59, 130, 246) !important;
   outline-offset: 2px !important;
 }
 
 html input:focus,
 html textarea:focus,
 html select:focus {
-  outline: 2px solid rgb(59 130 246) !important; /* blue-500 */
+  outline: 2px solid rgb(59 130 246) !important; /* Ensure global focus styles */
   outline-offset: 2px !important;
 }
